--- a/index.html
+++ b/index.html
@@ -6,116 +6,225 @@
     <title>LVG Kino</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Montserrat', Arial, sans-serif;
             margin: 0;
-            padding: 20px;
-            background-color: #f4f4f4;
-            color: #333;
+            padding: 0;
+            background: linear-gradient(135deg, #1a1a1a 0%, #2c3e50 100%);
+            color: #ecf0f1;
+            overflow-x: hidden;
         }
         h1 {
             text-align: center;
-            color: #2c3e50;
+            color: #e74c3c;
+            padding: 20px 0;
+            font-size: 2.5em;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
         h2, h3 {
-            color: #34495e;
+            color: #ecf0f1;
+            text-align: center;
+        }
+        #session-header {
+            background-color: rgba(44, 62, 80, 0.9);
+            padding: 10px 20px;
+            border-radius: 10px 10px 0 0;
+            margin: 20px auto;
+            max-width: 90%;
+            text-align: center;
+            font-size: 1.2em;
         }
         #session-panel {
-            background-color: #fff;
+            background-color: rgba(44, 62, 80, 0.9);
             padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
+            border-radius: 0 0 15px 15px;
+            margin: 0 auto 20px;
+            max-width: 90%;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
         }
         #session-list {
             list-style-type: none;
             padding: 0;
             display: flex;
             flex-wrap: wrap;
-            gap: 10px;
+            gap: 15px;
+            justify-content: center;
         }
         #session-list li {
             background-color: #3498db;
             color: white;
-            padding: 10px 20px;
-            border-radius: 5px;
+            padding: 15px 25px;
+            border-radius: 10px;
             cursor: pointer;
-            transition: background-color 0.3s;
+            transition: all 0.3s ease;
+            font-weight: bold;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
         #session-list li:hover {
             background-color: #2980b9;
+            transform: scale(1.05);
         }
         #session-list li.selected {
             background-color: #e74c3c;
-            font-weight: bold;
+            transform: scale(1.1);
         }
         #seats-container {
-            margin-top: 20px;
+            margin: 30px auto;
             text-align: center;
+            background-color: rgba(44, 62, 80, 0.9);
+            padding: 20px;
+            border-radius: 15px;
+            max-width: 90%;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+        }
+        .screen {
+            width: 60%;
+            height: 20px;
+            background-color: #ecf0f1;
+            margin: 0 auto 20px;
+            border-radius: 5px;
+            text-align: center;
+            line-height: 20px;
+            color: #2c3e50;
+            font-size: 0.9em;
+            font-weight: bold;
         }
         #seats {
             display: grid;
-            grid-template-columns: repeat(5, 50px);
-            gap: 10px;
+            gap: 15px;
             justify-content: center;
             margin: 20px auto;
         }
-        .seat {
+        .seat.pouf {
             width: 50px;
             height: 50px;
             background-color: #2ecc71;
-            color: white;
-            border-radius: 5px;
+            border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             cursor: pointer;
-            transition: background-color 0.3s;
+            transition: all 0.3s ease;
+            font-weight: bold;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+        .seat.double-sofa {
+            width: 100px;
+            height: 50px;
+            background-color: #3498db;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-weight: bold;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        }
+        .seat.quad-sofa {
+            width: 120px;
+            height: 60px;
+            background-color: #e67e22;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-weight: bold;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
         .seat.booked {
-            background-color: #e74c3c;
+            opacity: 0.7;
             cursor: not-allowed;
         }
+        .seat.booked.pouf { background-color: #27ae60; }
+        .seat.booked.double-sofa { background-color: #2980b9; }
+        .seat.booked.quad-sofa { background-color: #d35400; }
         .seat.selected {
-            background-color: #f1c40f;
-            color: #333;
+            transform: scale(1.1);
         }
-        button {
+        .seat.selected.pouf { background-color: #27ae60; }
+        .seat.selected.double-sofa { background-color: #2980b9; }
+        .seat.selected.quad-sofa { background-color: #d35400; }
+        #booking-form {
+            margin-top: 20px;
+            text-align: center;
+        }
+        #booking-form input, #booking-form select {
+            padding: 10px;
+            margin: 5px;
+            border-radius: 5px;
+            border: none;
+            font-size: 1em;
+        }
+        #booking-form button {
             padding: 10px 20px;
-            background-color: #3498db;
+            background-color: #e74c3c;
             color: white;
             border: none;
-            border-radius: 5px;
+            border-radius: 10px;
             cursor: pointer;
-            transition: background-color 0.3s;
+            transition: all 0.3s ease;
+            font-size: 1.1em;
+            font-weight: bold;
+            margin-top: 10px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
-        button:hover {
-            background-color: #2980b9;
+        #booking-form button:hover {
+            background-color: #c0392b;
+            transform: scale(1.05);
         }
         @media (max-width: 600px) {
-            #seats { grid-template-columns: repeat(3, 50px); }
-            #session-list { flex-direction: column; }
-            #session-list li { width: 100%; text-align: center; }
+            #seats {
+                gap: 10px;
+            }
+            .seat.pouf { width: 40px; height: 40px; }
+            .seat.double-sofa { width: 80px; height: 40px; }
+            .seat.quad-sofa { width: 100px; height: 50px; }
+            #session-list {
+                flex-direction: column;
+                align-items: center;
+            }
+            #session-list li {
+                width: 80%;
+                text-align: center;
+            }
+            h1 { font-size: 1.8em; }
         }
     </style>
 </head>
 <body>
     <h1>LVG Kino</h1>
 
+    <div id="session-header"></div>
+
     <div id="session-panel">
-        <h2>Выберите сеанс</h2>
+        <h2>Сеансы</h2>
         <ul id="session-list"></ul>
     </div>
 
     <div id="seats-container" style="display: none;">
         <h3>Выберите места</h3>
+        <div class="screen">Экран</div>
         <div id="seats"></div>
-        <button onclick="bookSeats()">Забронировать</button>
+        <div id="booking-form" style="display: none;">
+            <input type="text" id="contact" placeholder="Телефон или почта" required>
+            <select id="people-count" required>
+                <option value="">Выберите количество человек</option>
+            </select>
+            <select id="payment-method" required>
+                <option value="">Выберите способ оплаты</option>
+                <option value="test">Тестовый режим</option>
+            </select>
+            <button onclick="bookSeats()">Подтвердить бронирование</button>
+        </div>
     </div>
 
     <script>
         let activeSessions = [];
         let activeSessionIndex = -1;
         let selectedSeats = [];
+        const TICKET_PRICE = 400;
 
         async function fetchSessions() {
             try {
@@ -150,24 +259,40 @@
         function isSessionExpired(session) {
             const now = new Date();
             const sessionTime = new Date(`${session.date}T${session.time}:00`);
-            sessionTime.setHours(sessionTime.getHours() + 4); // +4 часа
+            sessionTime.setHours(sessionTime.getHours() + 4);
             return now > sessionTime;
         }
 
-        function drawSessions() {
+        function getAvailableSeatsCount(bookings) {
+            const totalSeats = 8 + 5 + 6 + (4 + 2) + (3 + 2); // Пуфики + 2х диваны + 4х диваны
+            const bookedSeats = bookings.length;
+            return totalSeats - bookedSeats;
+        }
+
+        async function drawSessions() {
             const sessionList = document.getElementById('session-list');
+            const sessionHeader = document.getElementById('session-header');
+            const today = new Date().toLocaleDateString('ru-RU', { day: 'numeric', month: 'long', year: 'numeric' });
+            sessionHeader.textContent = `Дата: ${today}`;
             const previousSelection = activeSessionIndex !== -1 ? sessionList.children[activeSessionIndex] : null;
             sessionList.innerHTML = '';
-            activeSessions.forEach((session, index) => {
+            activeSessions.sort((a, b) => {
+                const timeA = new Date(`${a.date}T${a.time}:00`).getTime();
+                const timeB = new Date(`${b.date}T${b.time}:00`).getTime();
+                return timeA - timeB;
+            });
+            for (const [index, session] of activeSessions.entries()) {
+                const bookings = await fetchBookings(session.movie, session.date, session.time);
+                const availableSeats = getAvailableSeatsCount(bookings);
                 const li = document.createElement('li');
-                li.textContent = `${session.movie} - ${session.date} в ${session.time}`;
+                li.textContent = `${session.time} - ${session.movie} (${availableSeats} свободных мест)`;
                 li.dataset.index = index;
                 li.addEventListener('click', () => selectSession(index));
-                if (previousSelection && previousSelection.textContent === li.textContent) {
+                if (previousSelection && previousSelection.textContent.includes(session.time)) {
                     li.classList.add('selected');
                 }
                 sessionList.appendChild(li);
-            });
+            }
         }
 
         async function selectSession(index) {
@@ -176,6 +301,7 @@
                 li.classList.toggle('selected', i === index);
             });
             await loadSeats();
+            document.getElementById('seats-container').scrollIntoView({ behavior: 'smooth' });
         }
 
         async function loadSeats() {
@@ -184,49 +310,91 @@
             const bookings = await fetchBookings(session.movie, session.date, session.time);
             const seatsContainer = document.getElementById('seats-container');
             const seatsDiv = document.getElementById('seats');
+            const bookingForm = document.getElementById('booking-form');
             seatsDiv.innerHTML = '';
             seatsContainer.style.display = 'block';
+            bookingForm.style.display = 'block';
 
-            const rows = ['A', 'B', 'C'];
-            const cols = [1, 2, 3, 4, 5];
-            const bookedSeats = bookings.map(b => `${b.row}${b.col}`);
+            const bookedSeats = bookings.map(b => `${b.row}${b.col}${b.type || 'pouf'}`);
 
-            selectedSeats = [];
+            const rows = [
+                { type: 'pouf', count: 8, grid: 'repeat(8, 50px)' },
+                { type: 'double-sofa', count: 5, grid: 'repeat(5, 100px)' },
+                { type: 'double-sofa', count: 6, grid: 'repeat(6, 100px)' },
+                { type: 'mixed', count: 6, grid: '120px repeat(4, 100px) 120px', types: ['quad-sofa', 'double-sofa', 'double-sofa', 'double-sofa', 'double-sofa', 'quad-sofa'] },
+                { type: 'mixed', count: 5, grid: '120px repeat(3, 100px) 120px', types: ['quad-sofa', 'double-sofa', 'double-sofa', 'double-sofa', 'quad-sofa'] }
+            ];
 
-            rows.forEach(row => {
-                cols.forEach(col => {
-                    const seatId = `${row}${col}`;
+            rows.forEach((row, rowIndex) => {
+                seatsDiv.style.gridTemplateColumns = row.grid;
+                for (let i = 0; i < row.count; i++) {
+                    const seatType = row.types ? row.types[i] : row.type;
+                    const seatId = `${String.fromCharCode(65 + rowIndex)}${i + 1}${seatType}`;
                     const seat = document.createElement('div');
-                    seat.className = 'seat';
-                    seat.textContent = seatId;
+                    seat.className = `seat ${seatType}`;
+                    seat.textContent = seatId.slice(0, -seatType.length);
                     seat.dataset.id = seatId;
                     if (bookedSeats.includes(seatId)) {
                         seat.classList.add('booked');
                     } else {
-                        seat.addEventListener('click', () => toggleSeat(seatId));
+                        seat.addEventListener('click', () => toggleSeat(seatId, seatType));
                     }
                     seatsDiv.appendChild(seat);
-                });
+                }
             });
+
+            updatePeopleCount();
         }
 
-        function toggleSeat(seatId) {
+        function toggleSeat(seatId, type) {
             const seat = document.querySelector(`.seat[data-id="${seatId}"]`);
             if (!seat || seat.classList.contains('booked')) return;
             const isSelected = seat.classList.toggle('selected');
             if (isSelected) {
-                selectedSeats.push({ type: 'seat', row: seatId[0], col: parseInt(seatId.slice(1)) });
+                selectedSeats.push({ id: seatId, type });
             } else {
-                selectedSeats = selectedSeats.filter(s => `${s.row}${s.col}` !== seatId);
+                selectedSeats = selectedSeats.filter(s => s.id !== seatId);
+            }
+            updatePeopleCount();
+        }
+
+        function updatePeopleCount() {
+            const peopleCountSelect = document.getElementById('people-count');
+            peopleCountSelect.innerHTML = '<option value="">Выберите количество человек</option>';
+            let totalPeople = 0;
+            selectedSeats.forEach(seat => {
+                if (seat.type === 'pouf') totalPeople += 1;
+                else if (seat.type === 'double-sofa') totalPeople += 2;
+                else if (seat.type === 'quad-sofa') totalPeople += 4;
+            });
+            const minPeople = selectedSeats.length === 0 ? 0 : selectedSeats.reduce((min, seat) => {
+                if (seat.type === 'pouf') return Math.min(min, 1);
+                if (seat.type === 'double-sofa') return Math.min(min, 2);
+                return Math.min(min, 4);
+            }, Infinity);
+            const maxPeople = selectedSeats.reduce((max, seat) => {
+                if (seat.type === 'pouf') return Math.max(max, 1);
+                if (seat.type === 'double-sofa') return Math.max(max, 3);
+                return Math.max(max, 6);
+            }, 0);
+
+            for (let i = minPeople; i <= maxPeople; i++) {
+                if (i > 0) {
+                    peopleCountSelect.innerHTML += `<option value="${i}">${i} человек</option>`;
+                }
             }
         }
 
         async function bookSeats() {
-            if (selectedSeats.length === 0 || activeSessionIndex === -1) {
-                alert('Выберите места для бронирования!');
+            const contact = document.getElementById('contact').value;
+            const peopleCount = document.getElementById('people-count').value;
+            const paymentMethod = document.getElementById('payment-method').value;
+            if (selectedSeats.length === 0 || !contact || !peopleCount || !paymentMethod) {
+                alert('Заполните все поля и выберите места!');
                 return;
             }
             const session = activeSessions[activeSessionIndex];
+            const totalCost = peopleCount * TICKET_PRICE;
             const response = await fetch('https://lvgkino.ru/.netlify/functions/bookings', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
@@ -234,13 +402,24 @@
                     movie: session.movie,
                     date: session.date,
                     time: session.time,
-                    seats: selectedSeats
+                    seats: selectedSeats.map(s => ({
+                        type: s.type,
+                        row: s.id[0],
+                        col: parseInt(s.id.slice(1, -s.type.length))
+                    })),
+                    contact,
+                    peopleCount,
+                    paymentMethod,
+                    totalCost
                 })
             });
 
             if (response.ok) {
-                alert('Места успешно забронированы!');
+                alert(`Бронирование успешно! Стоимость: ${totalCost} руб.`);
                 selectedSeats = [];
+                document.getElementById('contact').value = '';
+                document.getElementById('people-count').value = '';
+                document.getElementById('payment-method').value = '';
                 await loadSeats();
             } else {
                 const error = await response.json();
@@ -254,7 +433,7 @@
             activeSessions = (await fetchSessions()).filter(session => !isSessionExpired(session));
             const hasChanged = JSON.stringify(prevSessions) !== JSON.stringify(activeSessions);
             if (hasChanged) {
-                drawSessions();
+                await drawSessions();
                 if (prevActiveSessionIndex !== -1 && activeSessions[prevActiveSessionIndex]) {
                     selectSession(prevActiveSessionIndex);
                 } else if (activeSessions.length > 0) {
@@ -263,7 +442,7 @@
             }
         }
 
-        setInterval(refreshData, 30000); // Обновление каждые 30 секунд
+        setInterval(refreshData, 30000);
 
         window.onload = () => {
             refreshData();
