--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             max-width: 90%;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
         }
+        .session-date {
+            font-size: 1.1em;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
         #session-list {
             list-style-type: none;
             padding: 0;
@@ -140,6 +145,10 @@
         .seat.booked.pouf { background-color: #27ae60; }
         .seat.booked.double-sofa { background-color: #2980b9; }
         .seat.booked.quad-sofa { background-color: #d35400; }
+        .seat.booked-confirmed {
+            background-color: #e74c3c !important;
+            opacity: 1;
+        }
         .seat.selected {
             transform: scale(1.1);
         }
@@ -171,6 +180,50 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
         #booking-form button:hover {
+            background-color: #c0392b;
+            transform: scale(1.05);
+        }
+        .modal {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: 1000;
+        }
+        .modal-content {
+            background-color: #2c3e50;
+            margin: 15% auto;
+            padding: 20px;
+            border-radius: 10px;
+            width: 80%;
+            max-width: 400px;
+            text-align: center;
+            color: #ecf0f1;
+        }
+        .modal-content select {
+            padding: 10px;
+            margin: 10px 0;
+            border-radius: 5px;
+            border: none;
+            font-size: 1em;
+            width: 100%;
+        }
+        .modal-content button {
+            padding: 10px 20px;
+            background-color: #e74c3c;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-size: 1em;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+        .modal-content button:hover {
             background-color: #c0392b;
             transform: scale(1.05);
         }
@@ -209,9 +262,7 @@
         <div id="seats"></div>
         <div id="booking-form" style="display: none;">
             <input type="text" id="contact" placeholder="Телефон или почта" required>
-            <select id="people-count" required>
-                <option value="">Выберите количество человек</option>
-            </select>
+            <div id="people-count-display"></div>
             <select id="payment-method" required>
                 <option value="">Выберите способ оплаты</option>
                 <option value="test">Тестовый режим</option>
@@ -220,10 +271,21 @@
         </div>
     </div>
 
+    <div id="people-modal" class="modal">
+        <div class="modal-content">
+            <h4>Выберите количество человек</h4>
+            <select id="modal-people-count">
+                <option value="">Выберите...</option>
+            </select>
+            <button onclick="confirmPeopleCount()">Подтвердить</button>
+        </div>
+    </div>
+
     <script>
         let activeSessions = [];
         let activeSessionIndex = -1;
         let selectedSeats = [];
+        let selectedPeopleCount = 0;
         const TICKET_PRICE = 400;
 
         async function fetchSessions() {
@@ -276,29 +338,40 @@
             sessionHeader.textContent = `Дата: ${today}`;
             const previousSelection = activeSessionIndex !== -1 ? sessionList.children[activeSessionIndex] : null;
             sessionList.innerHTML = '';
-            activeSessions.sort((a, b) => {
-                const timeA = new Date(`${a.date}T${a.time}:00`).getTime();
-                const timeB = new Date(`${b.date}T${b.time}:00`).getTime();
-                return timeA - timeB;
+            const sessionsByDate = {};
+            activeSessions.forEach(session => {
+                const dateKey = session.date;
+                if (!sessionsByDate[dateKey]) sessionsByDate[dateKey] = [];
+                sessionsByDate[dateKey].push(session);
             });
-            for (const [index, session] of activeSessions.entries()) {
-                const bookings = await fetchBookings(session.movie, session.date, session.time);
-                const availableSeats = getAvailableSeatsCount(bookings);
-                const li = document.createElement('li');
-                li.textContent = `${session.time} - ${session.movie} (${availableSeats} свободных мест)`;
-                li.dataset.index = index;
-                li.addEventListener('click', () => selectSession(index));
-                if (previousSelection && previousSelection.textContent.includes(session.time)) {
-                    li.classList.add('selected');
-                }
-                sessionList.appendChild(li);
+            for (const [date, sessions] of Object.entries(sessionsByDate)) {
+                const dateHeader = document.createElement('div');
+                dateHeader.className = 'session-date';
+                dateHeader.textContent = new Date(date).toLocaleDateString('ru-RU', { day: 'numeric', month: 'long', year: 'numeric' });
+                sessionList.appendChild(dateHeader);
+                sessions.sort((a, b) => {
+                    const timeA = new Date(`${a.date}T${a.time}:00`).getTime();
+                    const timeB = new Date(`${b.date}T${b.time}:00`).getTime();
+                    return timeA - timeB;
+                }).forEach((session, index) => {
+                    const bookings = await fetchBookings(session.movie, session.date, session.time);
+                    const availableSeats = getAvailableSeatsCount(bookings);
+                    const li = document.createElement('li');
+                    li.textContent = `${session.time} - ${session.movie} (${availableSeats} свободных мест)`;
+                    li.dataset.index = activeSessions.indexOf(session);
+                    li.addEventListener('click', () => selectSession(activeSessions.indexOf(session)));
+                    if (previousSelection && previousSelection.textContent.includes(session.time)) {
+                        li.classList.add('selected');
+                    }
+                    sessionList.appendChild(li);
+                });
             }
         }
 
         async function selectSession(index) {
             activeSessionIndex = index;
             document.querySelectorAll('#session-list li').forEach((li, i) => {
-                li.classList.toggle('selected', i === index);
+                li.classList.toggle('selected', activeSessions[i] === activeSessions[index]);
             });
             await loadSeats();
             document.getElementById('seats-container').scrollIntoView({ behavior: 'smooth' });
@@ -321,8 +394,8 @@
                 { type: 'pouf', count: 8, grid: 'repeat(8, 50px)' },
                 { type: 'double-sofa', count: 5, grid: 'repeat(5, 100px)' },
                 { type: 'double-sofa', count: 6, grid: 'repeat(6, 100px)' },
-                { type: 'mixed', count: 6, grid: '120px repeat(4, 100px) 120px', types: ['quad-sofa', 'double-sofa', 'double-sofa', 'double-sofa', 'double-sofa', 'quad-sofa'] },
-                { type: 'mixed', count: 5, grid: '120px repeat(3, 100px) 120px', types: ['quad-sofa', 'double-sofa', 'double-sofa', 'double-sofa', 'quad-sofa'] }
+                { type: 'mixed', count: 6, grid: '120px 100px 100px 100px 100px 120px', types: ['quad-sofa', 'double-sofa', 'double-sofa', 'double-sofa', 'double-sofa', 'quad-sofa'] },
+                { type: 'mixed', count: 5, grid: '120px 100px 100px 120px', types: ['quad-sofa', 'double-sofa', 'double-sofa', 'quad-sofa'] }
             ];
 
             rows.forEach((row, rowIndex) => {
@@ -336,65 +409,56 @@
                     seat.dataset.id = seatId;
                     if (bookedSeats.includes(seatId)) {
                         seat.classList.add('booked');
+                        if (bookings.find(b => `${b.row}${b.col}${b.type}` === seatId && b.confirmed)) {
+                            seat.classList.add('booked-confirmed');
+                        }
                     } else {
-                        seat.addEventListener('click', () => toggleSeat(seatId, seatType));
+                        seat.addEventListener('click', () => openPeopleModal(seatId, seatType));
                     }
                     seatsDiv.appendChild(seat);
                 }
             });
 
-            updatePeopleCount();
+            document.getElementById('people-count-display').textContent = `Количество человек: ${selectedPeopleCount}`;
         }
 
-        function toggleSeat(seatId, type) {
-            const seat = document.querySelector(`.seat[data-id="${seatId}"]`);
-            if (!seat || seat.classList.contains('booked')) return;
-            const isSelected = seat.classList.toggle('selected');
-            if (isSelected) {
-                selectedSeats.push({ id: seatId, type });
-            } else {
-                selectedSeats = selectedSeats.filter(s => s.id !== seatId);
-            }
-            updatePeopleCount();
-        }
-
-        function updatePeopleCount() {
-            const peopleCountSelect = document.getElementById('people-count');
-            peopleCountSelect.innerHTML = '<option value="">Выберите количество человек</option>';
-            let totalPeople = 0;
-            selectedSeats.forEach(seat => {
-                if (seat.type === 'pouf') totalPeople += 1;
-                else if (seat.type === 'double-sofa') totalPeople += 2;
-                else if (seat.type === 'quad-sofa') totalPeople += 4;
-            });
-            const minPeople = selectedSeats.length === 0 ? 0 : selectedSeats.reduce((min, seat) => {
-                if (seat.type === 'pouf') return Math.min(min, 1);
-                if (seat.type === 'double-sofa') return Math.min(min, 2);
-                return Math.min(min, 4);
-            }, Infinity);
-            const maxPeople = selectedSeats.reduce((max, seat) => {
-                if (seat.type === 'pouf') return Math.max(max, 1);
-                if (seat.type === 'double-sofa') return Math.max(max, 3);
-                return Math.max(max, 6);
-            }, 0);
-
+        function openPeopleModal(seatId, type) {
+            const modal = document.getElementById('people-modal');
+            const select = document.getElementById('modal-people-count');
+            select.innerHTML = '<option value="">Выберите...</option>';
+            let minPeople = 0, maxPeople = 0;
+            if (type === 'pouf') { minPeople = 1; maxPeople = 1; }
+            else if (type === 'double-sofa') { minPeople = 2; maxPeople = 3; }
+            else if (type === 'quad-sofa') { minPeople = 4; maxPeople = 6; }
             for (let i = minPeople; i <= maxPeople; i++) {
-                if (i > 0) {
-                    peopleCountSelect.innerHTML += `<option value="${i}">${i} человек</option>`;
-                }
+                select.innerHTML += `<option value="${i}">${i} человек</option>`;
             }
+            modal.style.display = 'block';
+            selectedSeats = selectedSeats.filter(s => s.id !== seatId);
+            const seat = document.querySelector(`.seat[data-id="${seatId}"]`);
+            seat.classList.add('selected');
+            selectedSeats.push({ id: seatId, type });
+        }
+
+        function confirmPeopleCount() {
+            const modal = document.getElementById('people-modal');
+            const select = document.getElementById('modal-people-count');
+            selectedPeopleCount = parseInt(select.value);
+            if (selectedPeopleCount) {
+                document.getElementById('people-count-display').textContent = `Количество человек: ${selectedPeopleCount}`;
+            }
+            modal.style.display = 'none';
         }
 
         async function bookSeats() {
             const contact = document.getElementById('contact').value;
-            const peopleCount = document.getElementById('people-count').value;
             const paymentMethod = document.getElementById('payment-method').value;
-            if (selectedSeats.length === 0 || !contact || !peopleCount || !paymentMethod) {
+            if (selectedSeats.length === 0 || !contact || !selectedPeopleCount || !paymentMethod) {
                 alert('Заполните все поля и выберите места!');
                 return;
             }
             const session = activeSessions[activeSessionIndex];
-            const totalCost = peopleCount * TICKET_PRICE;
+            const totalCost = selectedPeopleCount * TICKET_PRICE;
             const response = await fetch('https://lvgkino.ru/.netlify/functions/bookings', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
@@ -405,10 +469,11 @@
                     seats: selectedSeats.map(s => ({
                         type: s.type,
                         row: s.id[0],
-                        col: parseInt(s.id.slice(1, -s.type.length))
+                        col: parseInt(s.id.slice(1, -s.type.length)),
+                        confirmed: true
                     })),
                     contact,
-                    peopleCount,
+                    peopleCount: selectedPeopleCount,
                     paymentMethod,
                     totalCost
                 })
@@ -416,10 +481,16 @@
 
             if (response.ok) {
                 alert(`Бронирование успешно! Стоимость: ${totalCost} руб.`);
+                selectedSeats.forEach(seat => {
+                    const seatElement = document.querySelector(`.seat[data-id="${seat.id}"]`);
+                    seatElement.classList.remove('selected');
+                    seatElement.classList.add('booked-confirmed');
+                });
                 selectedSeats = [];
+                selectedPeopleCount = 0;
                 document.getElementById('contact').value = '';
-                document.getElementById('people-count').value = '';
                 document.getElementById('payment-method').value = '';
+                document.getElementById('people-count-display').textContent = `Количество человек: ${selectedPeopleCount}`;
                 await loadSeats();
             } else {
                 const error = await response.json();
